solved bug of Keyboard Covers Focused Input Element Inside Grid Component in client add and edit page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,6 +13,13 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+
+// Keyboard Covers Focused Input Element Inside Grid Component
+// solved from : https://github.com/ionic-team/ionic/issues/10629
+.col {
+  position: initial;
+}
+
 .toolbar-ios {
   // min-height: 75px !important;
   .toolbar-background {
